--- a/task_frontend/package.json
+++ b/task_frontend/package.json
@@ -41,5 +41,6 @@
   },
   "devDependencies": {
     "gh-pages": "^6.3.0"
-  }
+  },
+  "homepage": "https://mkzaw25101999.github.io/Task-Manager-API"
 }
