--- a/task_frontend/.github/workflows/deploy-pages.yml
+++ b/task_frontend/.github/workflows/deploy-pages.yml
@@ -2,7 +2,7 @@ name: Deploy React to Pages
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -13,19 +13,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - uses: actions/setup-node@v4
-      with:
-        node-version: '20'
-        cache: 'npm'
+      - uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
 
-    - run: npm ci
-    - run: npm run build --if-present  # Creates dist/ or build/
+      - run: npm ci
+      - run: npm run build --if-present # Creates dist/ or build/
 
-    - uses: actions/upload-pages-artifact@v3
-      with:
-        path: dist/  # Change to 'build/' if Create React App
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: build/ # Change to 'build/' if Create React App
 
   deploy:
     environment:
@@ -34,4 +34,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/deploy-pages@v4
+      - uses: actions/deploy-pages@v4
